new switch pattern check style for interface upgrade